--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,10 @@ title: WANGMEDIA
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to WANGMEDIA. All your base are belong to us.
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
+  You can edit this line in _config.yml. 
+  
+  It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: wangmedia
